<resources>
    <string name="app_name">InventoryApp</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrar">Registrar</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="edad">Edad</string>
    <string name="nombre_p">Nombre:</string>
    <string name="expresion">[ A-Za-zäÄëËïÏöÖüÜáéíóúáéíóúÁÉÍÓÚÂÊÎÔÛâêîôûàèìòùÀÈÌÒÙ.-]+</string>

    <string name="pedir">PEDIR</string>
    <string name="title_activity_view_final">view_final</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enviar">ENVIAR</string>
</resources>
